# starmap

./: CMakeLists.txt  README.md  probe-move  probelogic
.github/workflows/: ci.yml
content/: .~lock.hygdata_v40.csv#  check_star_data.py  check_star_ra.py  config.json  ffont200.txt  generate_star_data.py  hygdata_v40.csv  hygdata_v40.csv.test  hygdata_v40.testdata.csv  star_data.json  star_data.json.mini  star_data.json.qttest
src/: GalaxyQuadTree.cpp  GalaxyQuadTree.h  GalaxyQuadTreeNode.cpp  GalaxyQuadTreeNode.h  Game.cpp  Game.h  LoadCSVData.cpp  LoadCSVData.h  LoadConfig.cpp  LoadConfig.h  LoadData.cpp  LoadData.h  Main.cpp  Probe.cpp  Probe.h  RenderSystem.cpp  RenderSystem.h  Star.cpp  Star.h  Utilities.cpp  Utilities.h
src/Platform/Unix/: LinuxPlatform.hpp
